@@ -9,6 +9,11 @@
 
 * Added a Chinese translation of the documentation by Delong .w.
 
+* The `text` argument to the find_* methods is now called `string`,
+  which is more accurate. `text` still works, but `string` is the
+  argument described in the documentation. `text` may eventually
+  change its meaning, but not for a very long time. [bug=1366856]
+
 * Fixed yet another problem that caused the html5lib tree builder to
   create a disconnected parse tree. [bug=1237763]
 
@@ -60,6 +65,9 @@
 
 * Improved the exception raised when you call .unwrap() or
   .replace_with() on an element that's not attached to a tree.
+
+* You can now create a Tag object without specifying a
+  TreeBuilder. Patch by Martijn Pieters. [bug=1307471]
 
 * You can now create a NavigableString or a subclass just by invoking
   the constructor. [bug=1294315]
